# cptnHook

./: CMakeLists.txt  README.md
inc/: reader.h  utils.h  writer.h
python/: cptnhook  cptnhookAnalyze  generateInterceptors.py
src/: cptnHookLite.cpp
test/: reader.cpp  simpleProg.cpp  writerReader.cpp
